<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IT342 Auth</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="dashboard_title">Dashboard / Profile</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="register_prompt">Don\'t have an account? Register</string>
    <string name="login_prompt">Already have an account? Login</string>
    <string name="profile_id">ID</string>
    <string name="date_joined">Date joined</string>
</resources>
